add new index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Author:Webstrot
       <div id="sidebar" class="bounce-to-right index3_sidebar">
         <div id="toggle_close">×</div>
         <div id="cssmenu">
-          <a href="index3.html"
+          <a href="index.html"
             ><img
               style="width: 30px !important"
               src="images/logo3.png"
@@ -58,7 +58,7 @@ Author:Webstrot
               <a href="#"><i class="flaticon-home"></i>index</a>
               <ul>
                 <li>
-                  <a href="index3.html">
+                  <a href="index.html">
                     <i class="flaticon-home"></i>index I</a
                   >
                 </li>
@@ -68,7 +68,7 @@ Author:Webstrot
                   >
                 </li>
                 <li>
-                  <a href="index3.html"
+                  <a href="index.html"
                     ><i class="flaticon-home"></i>index III</a
                   >
                 </li>
@@ -239,7 +239,7 @@ Author:Webstrot
         <div class="container-fluid">
           <div class="m24_logo_wrapper">
             <div class="ms_logo_div">
-              <a href="index3.html">
+              <a href="index.html">
                 <img
                   src="images/logo3.png"
                   style="width: 80px !important; height: 80px"
@@ -4097,7 +4097,7 @@ Author:Webstrot
             <div class="col-lg-3 col-md-6 col-12 col-sm-12">
               <div class="footer_widget footer_about_wrapper ms_cover">
                 <div class="wrapper_first_image">
-                  <a href="index3.html"
+                  <a href="index.html"
                     ><img
                       src="images/logo3.png"
                       class="img-responsive"
