add new bg color and sliders

--- a/index.html
+++ b/index.html
@@ -44,167 +44,46 @@ Author:Webstrot
     <div class="cursor"></div>
     <!-- top navi wrapper Start -->
     <div class="m24_main_wrapper">
+      <!-- ... -->
       <div id="sidebar" class="bounce-to-right index3_sidebar">
         <div id="toggle_close">×</div>
         <div id="cssmenu">
-          <a href="index.html"
-            ><img
+          <a href="index.html">
+            <img
               style="width: 30px !important"
               src="images/logoRadioOnBranco.png"
               alt="logo"
-          /></a>
+            />
+          </a>
           <ul class="sidebb">
             <li class="has-sub">
-              <a href="#"><i class="flaticon-home"></i>index</a>
+              <a href="#"><i class="flaticon-home"></i>Home</a>
             </li>
             <li class="has-sub">
-              <a href="#"><i class="flaticon-album"></i>albums</a>
+              <a href="#"><i class="flaticon-playlist-3"></i>Explore</a>
               <ul>
                 <li>
-                  <a href="album.html"> <i class="flaticon-vinyl"></i>album</a>
-                </li>
-                <li>
-                  <a href="album_list.html"
-                    ><i class="flaticon-playlist-1"></i>album list</a
-                  >
-                </li>
-                <li>
-                  <a href="artist.html"
-                    ><i class="flaticon-headphones"></i>artist</a
-                  >
-                </li>
-                <li>
-                  <a href="artist_single.html"
-                    ><i class="flaticon-speaker"></i>artist single</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a href="#"><i class="flaticon-playlist-3"></i>browse music</a>
-              <ul>
-                <li>
-                  <a href="add_playlist.html"
-                    ><i class="flaticon-music"></i>add playlist</a
-                  >
-                </li>
-                <li>
-                  <a href="free_music.html"
-                    ><i class="flaticon-music-1"></i>free music</a
-                  >
+                  <a href="album.html"><i class="flaticon-vinyl"></i>Album</a>
                 </li>
                 <li>
                   <a href="genres.html"
-                    ><i class="flaticon-files-and-folders"></i>genres</a
-                  >
-                </li>
-                <li>
-                  <a href="genres_single.html"
-                    ><i class="flaticon-smartphone"></i>genres single</a
-                  >
-                </li>
-                <li>
-                  <a href="stations.html"
-                    ><i class="flaticon-radio"></i>stations</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a href="#"><i class="flaticon-clock"></i>music events</a>
-              <ul>
-                <li>
-                  <a href="events.html"
-                    ><i class="flaticon-calendar"></i>events</a
-                  >
-                </li>
-                <li>
-                  <a href="event_single.html"
-                    ><i class="flaticon-files-and-folders"></i>event single</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a href="#"><i class="flaticon-playlist-1"></i>your music</a>
-              <ul>
-                <li>
-                  <a href="download.html"
-                    ><i class="flaticon-download"></i>download</a
-                  >
-                </li>
-                <li>
-                  <a href="favourite.html"
-                    ><i class="flaticon-heart"></i>favourite</a
-                  >
-                </li>
-                <li>
-                  <a href="history.html"
-                    ><i class="flaticon-clock"></i>history</a
-                  >
-                </li>
-                <li>
-                  <a href="free_music.html"
-                    ><i class="flaticon-music-1"></i>free_music</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a href="#"><i class="flaticon-shopping-bag"></i> shop</a>
-              <ul>
-                <li>
-                  <a href="shop_sidebar.html"
-                    ><i class="flaticon-smartphone"></i>shop sidebar</a
-                  >
-                </li>
-                <li>
-                  <a href="shop_single.html">
-                    <i class="flaticon-info"></i>shop single</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a href="#"><i class="flaticon-playlist"></i> music blog</a>
-              <ul>
-                <li>
-                  <a href="blog_categories.html"
-                    ><i class="flaticon-vinyl"></i>blog category I</a
-                  >
-                </li>
-                <li>
-                  <a href="blog_category2.html">
-                    <i class="flaticon-album"></i>blog category II</a
-                  >
-                </li>
-                <li>
-                  <a href="blog_single.html">
-                    <i class="flaticon-globe"></i>blog single</a
+                    ><i class="flaticon-files-and-folders"></i>Genres</a
                   >
                 </li>
               </ul>
             </li>
             <li>
               <a href="contact_us.html"
-                ><i class="flaticon-internet"></i>contact us</a
-              >
-            </li>
-            <li>
-              <a href="pricing_plan.html"
-                ><i class="flaticon-bell"></i>pricing plan</a
-              >
-            </li>
-            <li>
-              <a href="error_page.html"
-                ><i class="flaticon-trash"></i>error 404</a
+                ><i class="flaticon-internet"></i>Contact Us</a
               >
             </li>
           </ul>
           <div class="lang_apply_btn">
             <ul>
               <li>
-                <a href="#"> <i class="flaticon-play-button"></i>create</a>
+                <a href="#"
+                  ><i class="flaticon-play-button"></i>Create Account</a
+                >
               </li>
             </ul>
           </div>
@@ -219,7 +98,7 @@ Author:Webstrot
             <div class="ms_logo_div">
               <a href="index.html">
                 <img
-                  src="images/logoRadioOnBranco.png"
+                  src="images/logoRadioOnPreto.png"
                   style="width: 100px !important; height: 50px"
                   alt="logo"
                 />
@@ -230,103 +109,44 @@ Author:Webstrot
             </div>
           </div>
 
-          <div
-            class="m24_header_right_Wrapper d-none d-sm-none d-md-none d-lg-none d-xl-block"
-          ></div>
-
           <div class="m24_navigation_wrapper">
             <div
               class="mainmenu d-xl-block d-lg-block d-md-none d-sm-none d-none"
             >
               <ul class="main_nav_ul">
                 <li class="has-mega gc_main_navigation">
-                  <a href="#" class="gc_main_navigation"
-                    >browse <i class="flaticon-down-arrow"></i
-                  ></a>
+                  <a href="#" class="gc_main_navigation">
+                    Notícias  <i class="flaticon-down-arrow"></i>
+                  </a>
                   <ul class="navi_2_dropdown">
                     <li class="parent">
-                      <a href="add_playlist.html"
-                        ><i class="fas fa-caret-right"></i>featured playlist</a
-                      >
-                    </li>
-                    <li class="parent">
-                      <a href="artist.html"
-                        ><i class="fas fa-caret-right"></i>top artists</a
+                      <a href="album.html"
+                        ><i class="fas fa-caret-right"></i>Albums</a
                       >
                     </li>
                     <li class="parent">
                       <a href="genres.html"
-                        ><i class="fas fa-caret-right"></i>new genres</a
-                      >
-                    </li>
-                    <li class="parent">
-                      <a href="album.html"
-                        ><i class="fas fa-caret-right"></i>all albums</a
-                      >
-                    </li>
-                    <li class="parent">
-                      <a href="album_list.html"
-                        ><i class="fas fa-caret-right"></i>weekly tops</a
+                        ><i class="fas fa-caret-right"></i>Genres</a
                       >
                     </li>
                   </ul>
                 </li>
                 <li>
-                  <a href="stations.html" class="gc_main_navigation">radio</a>
-                </li>
-                <li class="has-mega gc_main_navigation">
-                  <a href="#" class="gc_main_navigation"
-                    >more <i class="flaticon-down-arrow"></i
-                  ></a>
-                  <ul class="navi_2_dropdown">
-                    <li class="parent">
-                      <a href="contact_us.html"
-                        ><i class="fas fa-caret-right"></i>contact</a
-                      >
-                    </li>
-                    <li class="parent">
-                      <a href="pricing_plan.html"
-                        ><i class="fas fa-caret-right"></i> pricing plan
-                      </a>
-                    </li>
-                    <li class="parent">
-                      <a href="error_page.html"
-                        ><i class="fas fa-caret-right"></i> error page
-                      </a>
-                    </li>
-                    <li class="parent">
-                      <a href="favourite.html"
-                        ><i class="fas fa-caret-right"></i> favourite song
-                      </a>
-                    </li>
-                  </ul>
+                  <a href="contact_us.html" class="gc_main_navigation"
+                    >Contato</a
+                  >
                 </li>
               </ul>
             </div>
-            <!-- mainmenu end -->
-            <!-- <div class="navi_searchbar_wrapper">
-              <i class="flaticon-magnifying-glass"></i>
-
-              <input
-                type="text"
-                id="justAnotherInputBox"
-                placeholder="Search for Songs, Artists, Playlists and More.."
-              />
-            </div> -->
-
-            <div
-              class="m24_navi_langauage_box d-none d-sm-none d-md-none d-lg-none d-xl-block"
-            ></div>
           </div>
         </div>
       </div>
 
+      <!-- .... -->
+
       <!-- navi wrapper End -->
       <!-- slider wrapper start -->
       <div class="main_slider_wrapper slider-area index3_slider_wrapper">
-        <div class="slider_headphone">
-          <img src="images/headphone.png" class="img-responsive" alt="img" />
-        </div>
         <div
           id="carousel-example-generic"
           class="carousel slide"
@@ -335,74 +155,16 @@ Author:Webstrot
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
               <div class="carousel-captions caption-1">
-                <div class="container jn_container">
-                  <div class="row">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                      <div class="content">
-                        <h1 data-animation="animated fadeInUp">sound,</h1>
-
-                        <h2 data-animation="animated fadeInUp">your world</h2>
-                        <p data-animation="animated fadeInUp">
-                          Even while listening to music, simply say “Olivia”
-                          <br />
-                          to interact with Olivia.
-                        </p>
-                        <div class="slider_btn ms_cover">
-                          <div class="lang_apply_btn">
-                            <ul>
-                              <li data-animation="animated fadeInUp">
-                                <a href="#">
-                                  <i class="flaticon-play-button"></i>browse</a
-                                >
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="clear"></div>
-                      </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                      <div class="content_img_wrapper">
-                        <img src="images/slider3.png" alt="img" />
-                      </div>
-                    </div>
-                  </div>
+                <div class="slider-content">
+                  <img src="images/bg-top-1.png" class="slider-img" alt="img" />
                 </div>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="carousel-captions caption-2">
-                <div class="container jn_container">
-                  <div class="row">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                      <div class="content">
-                        <h1 data-animation="animated fadeInUp">sound,</h1>
-
-                        <h2 data-animation="animated fadeInUp">your world</h2>
-                        <p data-animation="animated fadeInUp">
-                          Even while listening to music, simply say “Olivia”
-                          <br />
-                          to interact with Olivia.
-                        </p>
-                        <div class="slider_btn ms_cover">
-                          <div class="lang_apply_btn">
-                            <ul>
-                              <li data-animation="animated fadeInUp">
-                                <a href="#">
-                                  <i class="flaticon-play-button"></i>browse</a
-                                >
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="clear"></div>
-                      </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                      <div class="content_img_wrapper">
-                        <img src="images/slider3.png" alt="img" />
-                      </div>
-                    </div>
+              <div class="carousel-item active">
+                <div class="carousel-captions caption-1">
+                  <div class="slider-content">
+                    <img src="images/bg-top-2.png" class="slider-img" alt="img" />
                   </div>
                 </div>
               </div>
@@ -498,7 +260,7 @@ Author:Webstrot
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="ms_heading_wrapper white_heading_wrapper">
-                <h1>treanding songs</h1>
+                <h1>Programas gravados</h1>
               </div>
             </div>
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
