add new responsise

--- a/index.html
+++ b/index.html
@@ -731,6 +731,8 @@ Author:Webstrot
         </div>
       </div>
       <!-- addvertisment wrapper end -->
+      <div class="pricing_plan_wrapper index3_pricing_plans ms_cover"></div>
+
       <!-- blog wrapper start -->
       <div id="blog-container" class="row"></div>
 
