new responsive all devices

--- a/index.html
+++ b/index.html
@@ -155,115 +155,18 @@ Author:Webstrot
 
       <!-- navi wrapper End -->
       <!-- slider wrapper start -->
-      <div class="main_slider_wrapper slider-area index3_slider_wrapper">
-        <div
-          id="carousel-example-generic"
-          class="carousel slide"
-          data-ride="carousel"
-        >
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <div class="carousel-captions caption-1">
-                <div class="slider-content">
-                  <img src="images/bg-top-1.png" class="slider-img" alt="img" />
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-item active">
-                <div class="carousel-captions caption-1">
-                  <div class="slider-content">
-                    <img
-                      src="images/bg-top-2.png"
-                      class="slider-img"
-                      alt="img"
-                    />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-captions caption-3">
-                <div class="container jn_container">
-                  <div class="row">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                      <div class="content">
-                        <h1 data-animation="animated fadeInUp">sound,</h1>
+  
 
-                        <h2 data-animation="animated fadeInUp">your world</h2>
-                        <p data-animation="animated fadeInUp">
-                          Even while listening to music, simply say “Olivia”
-                          <br />
-                          to interact with Olivia.
-                        </p>
-                        <div class="slider_btn ms_cover">
-                          <div class="lang_apply_btn">
-                            <ul>
-                              <li data-animation="animated fadeInUp">
-                                <a href="#">
-                                  <i class="flaticon-play-button"></i>browse</a
-                                >
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="clear"></div>
-                      </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                      <div class="content_img_wrapper">
-                        <img src="images/slider3.png" alt="img" />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <ol class="carousel-indicators">
-              <li
-                data-target="#carousel-example-generic"
-                data-slide-to="0"
-                class="active"
-              >
-                <span class="number"></span>
-              </li>
-              <li
-                data-target="#carousel-example-generic"
-                data-slide-to="1"
-                class=""
-              >
-                <span class="number"></span>
-              </li>
-              <li
-                data-target="#carousel-example-generic"
-                data-slide-to="2"
-                class=""
-              >
-                <span class="number"></span>
-              </li>
-            </ol>
-            <div class="carousel-nevigation">
-              <a
-                class="prev"
-                href="#carousel-example-generic"
-                role="button"
-                data-slide="prev"
-              >
-                <span> prev</span> <i class="flaticon-arrow-1"></i>
-              </a>
-              <a
-                class="next"
-                href="#carousel-example-generic"
-                role="button"
-                data-slide="next"
-              >
-                <span> next</span> <i class="flaticon-arrow"></i>
-              </a>
-            </div>
-          </div>
+      <!-- .. -->
+      <div class="prop-container">
+        <div>
+          <img class="prop-image" src="images/bg-top-1.png" alt="propagandas" />
         </div>
       </div>
+<!-- ... -->
 
+<!-- SLIDER Wrapper start -->
+    
       <!--slider wrapper end-->
       <!-- treanding song wrapper start -->
       <div
