new feat slider button

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Author:Webstrot
     
       <!--slider wrapper end-->
       <!-- treanding song wrapper start -->
-      <div
+      <!-- <div
         class="treanding_songs_wrapper treanding_index_wrapper index3_treanding_wraaper ms_cover"
       >
         <div class="container">
@@ -527,7 +527,7 @@ Author:Webstrot
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- treanding song wrapper end -->
       <!-- release album wrapper start -->
