--- a/index.html
+++ b/index.html
@@ -61,14 +61,29 @@ Author:Webstrot
             </li>
             <li class="has-sub">
               <a href="#"><i class="flaticon-playlist-3"></i>Parceiros</a>
-              <ul>
-                <li>
-                  <a href="album.html"><i class="flaticon-vinyl"></i>Album</a>
+              <ul
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                "
+                class="navi_2_dropdown"
+              >
+                <li class="parent">
+                  <a href="">
+                    <img style="width: 70px" src="images/istv.png" alt="" />
+                  </a>
                 </li>
-                <li>
-                  <a href="genres.html"
-                    ><i class="flaticon-files-and-folders"></i>Genres</a
-                  >
+                <li class="parent">
+                  <a href="#">
+                    <img
+                      style="width: 150px"
+                      src="images/ISTVPLAY 1.png"
+                      alt=""
+                    />
+
+                    <!-- <i class="fas fa-caret-right"></i> -->
+                  </a>
                 </li>
               </ul>
             </li>
@@ -81,7 +96,9 @@ Author:Webstrot
           <div class="lang_apply_btn">
             <ul>
               <li>
-                <a href="#"><i class="flaticon-play-button"></i>Youtube</a>
+                <a href="https://www.youtube.com/@RadioONFMJF" target="_blank"
+                  ><i class="flaticon-play-button"></i>Youtube</a
+                >
               </li>
             </ul>
           </div>
