--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- 
 Template Name: Radio on
 Version: 1.0.0
-Author:Webstrot 
+Author:Wendel de Lima 
 
 -->
 <!--[if !IE]><!-->
@@ -732,6 +732,15 @@ Author:Webstrot
                   <div class="item">
                     <div class="lr_prt_img_wrapper">
                       <img
+                        style="width: 150px !important; border-radius: 10px"
+                        src="images/fvf.jpg"
+                        alt="partner_img"
+                      />
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="lr_prt_img_wrapper">
+                      <img
                         style="width: 180px !important; height: 80px !important"
                         src="images/ISTVPLAY 2.png"
                         alt="partner_img"
@@ -784,7 +793,11 @@ Author:Webstrot
                         aria-expanded="true"
                         aria-controls="collapseOne"
                       >
-                        Dúvidas? <span>Entre em contato conosco </span>
+                        Quer fazer parceria?
+                        <span
+                          >Entre em contato conosco para parcerias e
+                          oportunidades.
+                        </span>
                       </a>
                     </h5>
                   </div>
@@ -844,11 +857,60 @@ Author:Webstrot
                           <div
                             class="more_playlist_wrapper index_more ms_cover"
                           >
+                            <h1 style="color: aliceblue; padding: 10px 0">
+                              Email para parcerias:
+                            </h1>
                             <h1>
-                              <a href="mailto:contato@radioonfm.com.br"
-                                >contato@radioonfm.com.br</a
+                              <a
+                                style="text-transform: none !important"
+                                href="mailto:contato@radioonfm.com.br"
+                                ><i class="fa fa-envelope"></i
+                                ><span
+                                  style="padding-left: 4px; font-size: 18px"
+                                >
+                                  contato@radioonfm.com.br</span
+                                >
+                              </a>
+                              <br />
+                              <a
+                                style="text-transform: none !important"
+                                href="mailto:contato@radioonfm.com.br"
+                                ><i class="fa fa-envelope"></i>
+                                <span
+                                  style="padding-left: 4px; font-size: 18px"
+                                >
+                                  anderson@radioonfm.com.br</span
+                                ></a
                               >
                             </h1>
+                            <br />
+
+                            <div class="social">
+                              <h1 style="color: aliceblue; padding: 10px 0">
+                                Whatsapp para parcerias:
+                              </h1>
+                              <a href="https://wa.me/3230151077" target="_blank"
+                                ><i class="fab fa-whatsapp">
+                                  <span
+                                    style="padding-left: 4px; font-size: 18px"
+                                  >
+                                    (32) 3015-1077
+                                  </span>
+                                </i></a
+                              >
+                              <br />
+                              <a
+                                href="https://wa.me/32988538883"
+                                target="_blank"
+                                ><i class="fab fa-whatsapp">
+                                  <span
+                                    style="padding-left: 4px; font-size: 18px"
+                                  >
+                                    (32) 98853-8883
+                                  </span>
+                                </i></a
+                              >
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -874,7 +936,7 @@ Author:Webstrot
                       src="images/logoRadioOnPreto.png"
                       class="img-responsive"
                       alt="logo"
-                      style="width: 100px !important; height: 70px"
+                      style="width: 200px !important; height: 70px"
                   /></a>
                 </div>
                 <div class="abotus_content"></div>
@@ -883,17 +945,41 @@ Author:Webstrot
                 >
                   <!-- <li><i class="fa fa-phone"></i>808 - 111 - 9999</li> -->
                   <li>
-                    <a href="#"
+                    <a
+                      target="_blank"
+                      href="mailto:contato@radioonfm.com.br"
+                      style="text-transform: none !important"
                       ><i class="fa fa-envelope"></i>contato@radioonfm.com.br</a
+                    >
+                    <br />
+                    <a
+                      target="_blank"
+                      href="mailto:anderson@radioonfm.com.br"
+                      style="text-transform: none !important"
+                      ><i class="fa fa-envelope"></i
+                      >anderson@radioonfm.com.br</a
                     >
                   </li>
                   <li>
-                    <!-- <a href="#"><i class="fas fa-user-alt"></i></a> -->
+                    <a target="_blank" href="https://wa.me/3230151077"
+                      ><i class="fab fa-whatsapp"
+                        ><span style="padding-left: 10px"
+                          >(32) 3015-1077</span
+                        ></i
+                      ></a
+                    >
+                    <a target="_blank" href="https://wa.me/32988538883"
+                      ><i class="fab fa-whatsapp"
+                        ><span style="padding-left: 10px"
+                          >(32) 98853-8883</span
+                        ></i
+                      ></a
+                    >
                   </li>
                 </ul>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-12 col-sm-12"></div>
+            <div class="col-lg-2 col-md-4 col-10 col-sm-10"></div>
             <div class="col-lg-3 col-md-6 col-12 col-sm-12">
               <div
                 class="footer_widget footer_contact_wrapper ft_heading ms_cover"
@@ -953,7 +1039,9 @@ Author:Webstrot
               <a href="#"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a target="_blank" href="https://www.instagram.com/radio.onfm"
+                ><i class="fab fa-instagram"></i
+              ></a>
             </li>
             <!-- <li>
               <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -975,7 +1063,9 @@ Author:Webstrot
               <a href="#"><i class="fab fa-dribbble"></i></a>
             </li> -->
             <li>
-              <a href="#"><i class="fab fa-whatsapp"></i></a>
+              <a href="https://wa.me/3230151077" target="_blank"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
             </li>
           </ul>
         </div>
@@ -985,14 +1075,19 @@ Author:Webstrot
           <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
               <div class="btm_foter_box">
-                <p>
-                  Copyright © 2024
+                <p style="text-transform: none">
+                  Desenvolvido e mantido por:
                   <a
                     href="https://www.linkedin.com/in/wendel-de-lima-74b6b01a1/"
                     target="_blank"
                   >
                   </a>
-                  <a href="#"> Wendel de Lima.</a>
+                  <a
+                    href="https://www.linkedin.com/in/wendel-de-lima-74b6b01a1/"
+                    target="_blank"
+                  >
+                    Wendel de Lima.</a
+                  >
                 </p>
                 <div class="aboutus_social_icons">
                   <a
