--- a/index.html
+++ b/index.html
@@ -645,14 +645,14 @@ Author:Wendel de Lima
                 <ul class="download_app_logo">
                   <li>
                     <a
-                      href="https://play.google.com/store/apps/details?id=radioon.virtues.ag.appradio.pro&pli=1"
+                      href="https://share.mob.radio.br/67eb7811839341641130f133690527bf"
                       target="_blank"
                       ><i class="flaticon-android-logo"></i
                     ></a>
                   </li>
                   <li>
                     <a
-                      href="https://apps.apple.com/br/app/r%C3%A1dio-on/id1608554113"
+                      href="https://share.mob.radio.br/67eb7811839341641130f133690527bf"
                       target="_blank"
                       ><i class="flaticon-apple"></i
                     ></a>
@@ -988,7 +988,7 @@ Author:Wendel de Lima
                 <h4>Baixe nosso APP</h4>
                 <span
                   ><a
-                    href="https://play.google.com/store/apps/details?id=radioon.virtues.ag.appradio.pro"
+                    href="https://apps.apple.com/br/app/r%C3%A1dio-on-fm/id6448729085?l=en-GB"
                     ><img
                       src="images/app_btn1.png"
                       class="img-responsive"
@@ -996,7 +996,7 @@ Author:Wendel de Lima
                 ></span>
                 <span
                   ><a
-                    href="https://apps.apple.com/br/app/r%C3%A1dio-on/id1608554113"
+                    href="https://share.mob.radio.br/67eb7811839341641130f133690527bf"
                     target="_blank"
                     ><img
                       src="images/app_btn2.png"
