--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ Author:Wendel de Lima
 
   <head>
     <meta charset="utf-8" />
-    <title>Rádio ON</title>
+    <title>Rádio ON - Juiz de Fora - Tocando emoções
+      que conectam...</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta name="description" content="Radio on,music,song" />
     <meta name="keywords" content="Radio on, radio" />
@@ -834,7 +835,7 @@ Author:Wendel de Lima
                     <section>
                       <h2 class="h2-md">Peça sua música e fale conosco</h2>
                       <p class="pdd-text">
-                        A rádio ONFM 100,7 é a maior e mais ouvida estação de Juiz de Fora e região. 
+                        A rádio ONFM 107,7 é a maior e mais ouvida estação de Juiz de Fora e região. 
                         Entre em contato conosco por e-mail, telefone ou WhatsApp para parcerias, pedidos de música e muito mais.
                       </p>
                 
@@ -877,9 +878,9 @@ Author:Wendel de Lima
                 
                       <!-- SEO Information -->
                       <div class="seo-info pdd-text">
-                        <h4>Sobre a ONFM 100,7</h4>
+                        <h4>Sobre a ONFM 107,7</h4>
                         <p class="pdd-text">
-                          A rádio ONFM 100,7 é a maior estação de Juiz de Fora, conhecida por sua 
+                          A rádio ONFM 107,7 é a maior estação de Juiz de Fora, conhecida por sua 
                           qualidade de transmissão, programação diversificada e compromisso com a música e a informação. 
                           Seja para ouvir suas músicas favoritas, acompanhar notícias ou participar de promoções, a ONFM é a sua rádio!
                         </p>
